--- a/templates/home.html
+++ b/templates/home.html
@@ -79,7 +79,7 @@
               </div>
               <p>Resumen (posteriormente...)</p>
               <div class="card-actions justify-end">
-                <a href='${article.page_url}' class="btn btn-primary btn-sm">Ver artículo</a>
+                <a href='${article.page_url}' target="_blank" class="btn btn-primary btn-sm">Ver artículo</a>
                 <a href='#' class="btn btn-secondary btn-sm">Empezar chat</a>
               </div>
             </div>
