--- a/templates/home.html
+++ b/templates/home.html
@@ -129,7 +129,7 @@
         if (chatSocket) {
           chatSocket.close();
         }
-        chatSocket = new WebSocket("ws://localhost:8000/chat");
+        chatSocket = new WebSocket("ws://" + location.hostname + ":" + location.port + "/chat");
 
         chatSocket.onmessage = function (event) {
           const data = JSON.parse(event.data);
@@ -194,7 +194,7 @@
           socket.close();
         }
 
-        socket = new WebSocket("ws://localhost:8000/ws");
+        socket = new WebSocket("ws://" + location.hostname + ":" + location.port + "/ws");
         socket.onopen = function () {
           socket.send(query);
         };
